--- a/popup.css
+++ b/popup.css
@@ -55,10 +55,12 @@ h1 {
 }
 
 h2 {
-  margin: 0 0 12px 0;
-  font-size: 16px;
-  font-weight: 500;
-  color: #444;
+  margin: 0 0 8px 0;
+  font-size: 13px;
+  font-weight: 400;
+  color: #666;
+  font-style: italic;
+  line-height: 1.3;
 }
 
 .hidden {
